crates/walrus-codegen/snapshots/lit_string.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

%String = type { i32, i8* }

@string = private unnamed_addr constant [12 x i8] c"hello world\00", align 1

define %String @main() {
main.entry:
  ret %String { i32 11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @string, i32 0, i32 0) }
}

