crates/walrus-codegen/snapshots/loop_and_break.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define i32 @main() {
main.entry:
  %loop.result.alloca = alloca i32, align 4
  br label %loop.body

loop.body:                                        ; preds = %main.entry
  %x.alloca = alloca i32, align 4
  store i32 5, i32* %x.alloca, align 4
  %x = load i32, i32* %x.alloca, align 4
  store i32 %x, i32* %loop.result.alloca, align 4
  br label %loop.exit

loop.exit:                                        ; preds = %loop.body
  %loop.result = load i32, i32* %loop.result.alloca, align 4
  ret i32 %loop.result
}

