crates/walrus-codegen/snapshots/loop_forever.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define {} @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret {} zeroinitializer
}

declare i32 @putchar(i32)

define i32 @main(i8* %main.env) {
main.entry:
  %loop.result.alloca = alloca {}, align 8
  br label %loop.body

loop.body:                                        ; preds = %loop.body, %main.entry
  br label %loop.body

loop.exit:                                        ; No predecessors!
  unreachable
}

